infra/engine-depl.yml
# ENGINE deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-deployment
  labels:
    app: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: engine
---
# clusterIP service for ENGINE
apiVersion: v1
kind: Service
metadata:
  name: engine-srvc
spec:
  type: ClusterIP
  selector:
    app: engine
  ports:
    - name: engine-port
      protocol: TCP
      port: 5000
      # targetPort: 5000
