infra/enginemovehandler-depl.yml
# EngineMoveHandler deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginemovehandler-deployment
  labels:
    app: enginemovehandler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enginemovehandler
  template:
    metadata:
      labels:
        app: enginemovehandler
    spec:
      containers:
        - name: enginemovehandler
          image: enginemovehandler
---
# clusterIP service for EngineMoveHandler
apiVersion: v1
kind: Service
metadata:
  name: enginemovehandler-srvc
spec:
  type: ClusterIP
  selector:
    app: enginemovehandler
  ports:
    - name: enginemovehandler-port
      port: 7000
