infra/enginemovereceiver-depl.yml
# ENGINE deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginemovereceiver-deployment
  labels:
    app: enginemovereceiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enginemovereceiver
  template:
    metadata:
      labels:
        app: enginemovereceiver
    spec:
      containers:
        - name: enginemovereceiver
          image: enginemovereceiver
---
# clusterIP service for ENGINE
apiVersion: v1
kind: Service
metadata:
  name: enginemovereceiver-srvc
spec:
  type: ClusterIP
  selector:
    app: enginemovereceiver
  ports:
    - name: enginemovereceiver-port
      protocol: TCP
      port: 6000
      # targetPort: 5000
