infra/enginemovesender-depl.yml
# UserMoveHandler deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginemovesender-deployment
  labels:
    app: enginemovesender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enginemovesender
  template:
    metadata:
      labels:
        app: enginemovesender
    spec:
      containers:
        - name: enginemovesender
          image: enginemovesender
---
# clusterIP service for UserMoveHandler
apiVersion: v1
kind: Service
metadata:
  name: enginemovesender-srvc
spec:
  type: ClusterIP
  selector:
    app: enginemovesender
  ports:
    - name: enginemovesender-port
      protocol: TCP
      port: 4000
      targetPort: 4000
