infra/usermovehandler-depl.yml
# UserMoveHandler deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermovehandler-deployment
  labels:
    app: useremovehandler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermovehandler
  template:
    metadata:
      labels:
        app: usermovehandler
    spec:
      containers:
        - name: usermovehandler
          image: usermovehandler
---
# clusterIP service for UserMoveHandler
apiVersion: v1
kind: Service
metadata:
  name: usermovehandler-srvc
spec:
  type: ClusterIP
  selector:
    app: usermovehandler
  ports:
    - name: enginemovehandler-port
      port: 3000
