infra/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /usermovehandler
            pathType: Prefix
            backend:
              service:
                name: usermovehandler-srvc
                port:
                  number: 3000
